deployment/redis/weatherapp-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-redis
  labels:
    app: weather-app-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app-redis
  template:
    metadata:
      labels:
        app: weather-app-redis
    spec:
      containers:
        - name: weather-app-redis
          image: redis/redis-stack-server:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /var/lib/redis/data
          ports:
            - containerPort: 6379
              protocol: TCP
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: weather-app-claim
            
            
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-redis-service
spec:
  type: LoadBalancer
  ports:
    - port: 8002
      targetPort: 6379
  selector:
    app: weather-app-redis
