deployment/redis/weatherapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: redis.weather-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app-lb
                port:
                  number: 8001
